# ct2

./: CMakeLists.txt  README.md
src/: bitops.h  board.cpp  board.h  main.cpp  opening_book.h  uci.cpp  uci.h
tests/: board_tests.cpp  full_game_test.py  illegal_move_test.py  random_position_tests.cpp  random_positions.txt
